--- a/hybrid/.gitignore
+++ b/hybrid/.gitignore
@@ -4,3 +4,5 @@ output.dot
 output.png
 
 !algorithms/static/javascript-call-graph/node_modules
+!algorithms/nativecalls/javascript-call-graph/node_modules
+
